--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.php", "use": "@vercel/php" },
+    { "src": "api/index.php", "use": "vercel-php@0.3.6" },
     { "src": "user_guide/**", "use": "@vercel/static" }
   ],
   "routes": [
